--- a/Web/css/deepexplore.css
+++ b/Web/css/deepexplore.css
@@ -1,3 +1,19 @@
-.inputword{
+.deepword{
 padding-top: 2%;
+position: relative;
+width: 30%;
+margin-right: auto;
+margin-left: auto;
+
+}
+.showword{
+padding-top: 2%;
+position: relative;
+text-align:center
+}
+.btnmdl{ //button in the midle
+	border-top-left-radius: 0;
+  	border-bottom-left-radius: 0;
+  	border-top-right-radius: 0;
+  	border-bottom-right-radius: 0;
 }
