--- a/Web/css/deepexplore.css
+++ b/Web/css/deepexplore.css
@@ -1,7 +1,7 @@
 .deepword{
 padding-top: 2%;
 position: relative;
-width: 60%;
+width: 40%;
 margin-right: auto;
 margin-left: auto;
 
@@ -12,16 +12,17 @@ position: relative;
 text-align:center
 }
 
-.buttonMiddle{ //button in the midle
-	border-top-left-radius: 0;
+/*button in the midle*/
+.buttonMiddle{ 	
   	border-bottom-left-radius: 0;
+  	border-top-left-radius: 0;
   	border-top-right-radius: 0;
   	border-bottom-right-radius: 0;
 }
 
 .showButton{
-	position: relative;
 	padding-top: 2%;
+	width: 11%;
 	margin-right: auto;
 	margin-left: auto;
 }
