refactorização no php, agora esta implementado um padrado estrategia para facilitar a obtenção das queries. Nome já funciona

--- a/Web/partials/nome.html
+++ b/Web/partials/nome.html
@@ -4,9 +4,19 @@
 			<td>
 				<table class="table table-bordered">
 					<tr class="active">
-  						<td >Pré-Modificadores </td>
+  						<td >Pré-Modificadores (Advérbio) </td>
 					</tr>	
-					<tr class="warning" ng-repeat="x in PRE-MOD">
+					<tr class="warning" ng-repeat="x in MOD_PRE_NOUN_ADV">
+    					<td>{{ x.word  + "  " +  x.frequency}}</td>
+					</tr>
+				</table>
+			</td>
+			<td>
+				<table class="table table-bordered">
+					<tr class="active">
+  						<td >Pré-Modificadores (Adjetivo)</td>
+					</tr>	
+					<tr class="warning" ng-repeat="x in MOD_PRE_NOUN_ADJ">
     					<td>{{ x.word  + "  " +  x.frequency}}</td>
 					</tr>
 				</table>
@@ -16,7 +26,7 @@
 					<tr class="active">
   						<td >Modificadores PP </td>
 					</tr>	
-					<tr class="success" ng-repeat="x in MOD-PP">
+					<tr class="success" ng-repeat="x in MOD_POST_NOUN_PP">
     					<td>{{ x.word  + "  " +  x.frequency}}</td>
 					</tr>
 				</table>
@@ -24,13 +34,12 @@
 			<td>
 				<table class="table table-bordered">
 					<tr class="active">
-  						<td >Pós Modificadores Adjetivais</td>
+  						<td >Pós Modificadores (Adjetivo)</td>
 					</tr>	
-					<tr class="success" ng-repeat="x in POST-MOD">
+					<tr class="success" ng-repeat="x in MOD_POST_NOUN_ADJ">
     					<td>{{ x.word  + "  " +  x.frequency}}</td>
 					</tr>
 				</table>
 			</td>
-
 	</table>
 </div>
