tirando os casos em que se vai mostrar o conjunto de palavras que depende de outra e nao aquelas que dependem da palavra, as yabelas são preenchinas quer no nome, adjectivo, verbo ou adve´rbio

--- a/Web/partials/nome.html
+++ b/Web/partials/nome.html
@@ -7,7 +7,7 @@
   						<td >Pré-Modificadores (Advérbio) </td>
 					</tr>	
 					<tr class="warning" ng-repeat="x in MOD_PRE_NOUN_ADV">
-    					<td>{{ x.word  + "  " +  x.frequency}}</td>
+    					<td>{{ x.word}}</td>
 					</tr>
 				</table>
 			</td>
@@ -17,7 +17,7 @@
   						<td >Pré-Modificadores (Adjetivo)</td>
 					</tr>	
 					<tr class="warning" ng-repeat="x in MOD_PRE_NOUN_ADJ">
-    					<td>{{ x.word  + "  " +  x.frequency}}</td>
+    					<td>{{ x.word}}</td>
 					</tr>
 				</table>
 			</td>
@@ -27,7 +27,7 @@
   						<td >Modificadores PP </td>
 					</tr>	
 					<tr class="success" ng-repeat="x in MOD_POST_NOUN_PP">
-    					<td>{{ x.word  + "  " +  x.frequency}}</td>
+    					<td>{{ x.word}}</td>
 					</tr>
 				</table>
 			</td>
@@ -37,7 +37,7 @@
   						<td >Pós Modificadores (Adjetivo)</td>
 					</tr>	
 					<tr class="success" ng-repeat="x in MOD_POST_NOUN_ADJ">
-    					<td>{{ x.word  + "  " +  x.frequency}}</td>
+    					<td>{{ x.word}}</td>
 					</tr>
 				</table>
 			</td>
