--- a/Web/partials/adjectivo.html
+++ b/Web/partials/adjectivo.html
@@ -4,20 +4,50 @@
 			<td>
 				<table class="table table-bordered">
 					<tr class="active">
-  						<td >ATTRIB</td>
+  						<td >Pré-Modificador (Adjectivo)</td>
 					</tr>	
-					<tr class="success" ng-repeat="x in ATTRIB">
-    					<td>{{ x.word  + "  " +  x.frequency}}</td>
+					<tr class="success" ng-repeat="x in MOD_PRE_ADJ_ADJ">
+    					<td>{{ x.word}}</td>
 					</tr>
 				</table>
 			</td>
 			<td>
 				<table class="table table-bordered">
 					<tr class="active">
-  						<td >MOD</td>
+  						<td >Pré-Modificador (Advérbio)</td>
 					</tr>	
-					<tr class="success" ng-repeat="x in MOD">
-    					<td>{{ x.word  + "  " +  x.frequency}}</td>
+					<tr class="success" ng-repeat="x in MOD_PRE_ADJ_ADV">
+    					<td>{{ x.word}}</td>
+					</tr>
+				</table>
+			</td>
+			<td>
+				<table class="table table-bordered">
+					<tr class="active">
+  						<td >Pré-Modificador de (Nome)</td>
+					</tr>	
+					<tr class="success" ng-repeat="x in MOD_PRE_NOUN_ADJ">
+    					<td>{{ x.word}}</td>
+					</tr>
+				</table>
+			</td>
+			<td>
+				<table class="table table-bordered">
+					<tr class="active">
+  						<td >Pós-Modificador de (Nome)</td>
+					</tr>	
+					<tr class="success" ng-repeat="x in MOD_POST_NOUN_ADJ">
+    					<td>{{ x.word}}</td>
+					</tr>
+				</table>
+			</td>
+			<td>
+				<table class="table table-bordered">
+					<tr class="active">
+  						<td>Pós-Modificador PP</td>
+					</tr>	
+					<tr class="success" ng-repeat="x in MOD_POST_ADJ_PP">
+    					<td>{{ x.word}}</td>
 					</tr>
 				</table>
 			</td>
