interface é agora uma interface abstracta, que tem dois métodos que não sao abstractos, um que retorna as palavras que se relacionam com a palavra gorvernadora da dependencia, e outro queretorna as palavras governadoras da palavra dependece

--- a/Web/css/deepexplore.css
+++ b/Web/css/deepexplore.css
@@ -1,11 +1,24 @@
+
+@media (max-width:960px){
+.deepword{
+ padding-top: 2%;
+position: relative;
+width: 80%;
+margin-right: auto;
+margin-left: auto;
+}
+}
+@media (min-width:960px){
 .deepword{
 padding-top: 2%;
 position: relative;
 width: 40%;
 margin-right: auto;
 margin-left: auto;
-
 }
+}
+
+
 .showword{
 padding-top: 2%;
 position: relative;
