--- a/Web/partials/deep.html
+++ b/Web/partials/deep.html
@@ -3,12 +3,12 @@
 		<div class="row rowDeps">
 			<div class="col-xs-6">
 				<div class="depTitle">
-					<h3 class="title">Dependências à Esquerda</h3>
+					<h3 class="title">Dependências à Esquerda</h3>
 				</div>
 			</div>
 			<div class="col-xs-6">
 				<div class="depTitle">
-					<h3 class="title">Dependências à Direita</h3>
+					<h3 class="title">Dependências à Direita</h3>
 				</div>
 			</div>
 		</div>
@@ -58,7 +58,7 @@
 			<div class="col-xs-6">
 				<div class="panel panel-rightDepsGovernor">
 					<div class="panel-heading">
-						<h3 class="panel-title">Alvo é Modificado</h3>
+						<h3 class="panel-title">Alvo é Modificador</h3>
 					</div>
 					<div class="panel-body">
 						Panel content
