--- a/Web/partials/deep.html
+++ b/Web/partials/deep.html
@@ -20,7 +20,9 @@
 						<h3 class="panel-title"> Alvo é Modificado</h3>
 					</div>
 					<div class="panel-body">
-						Panel content
+						<div class="row rowDeps">
+							{{PRE_GOVERNED}}
+						</div>
 					</div>
 				</div>
 			</div>
@@ -30,7 +32,9 @@
 						<h3 class="panel-title">Alvo é Modificador</h3>
 					</div>
 					<div class="panel-body">
-						Panel content
+						<div class="row rowDeps">
+							{{PRE_GOVERNOR}}
+						</div>
 					</div>
 				</div>
 			</div>
@@ -51,7 +55,9 @@
 						<h3 class="panel-title">Alvo é Modificado</h3>
 					</div>
 					<div class="panel-body">
-							Panel content
+						<div class="row rowDeps">	
+							{{POST_GOVERNED}}
+						</div>
 					</div>
 				</div>
 			</div>
@@ -61,7 +67,9 @@
 						<h3 class="panel-title">Alvo é Modificador</h3>
 					</div>
 					<div class="panel-body">
-						Panel content
+						<div class="row rowDeps">
+							{{POST_GOVERNOR}}
+						</div>
 					</div>
 				</div>
 			</div>
