--- a/Web/partials/deep.html
+++ b/Web/partials/deep.html
@@ -21,7 +21,16 @@
 					</div>
 					<div class="panel-body">
 						<div class="row rowDeps">
-							{{PRE_GOVERNED}}
+							<div class="col-xs-6 .col-sm-3" ng-repeat="x in PRE_GOVERNED">
+								<table class="table table-bordered">
+									<tr class="active">
+  										<td >{{}}</td>
+									</tr>	
+									<tr class="warning" ng-repeat="y in x">
+    									<td>{{y.word}}</td>
+									</tr>
+								</table>	
+							</div>
 						</div>
 					</div>
 				</div>
@@ -33,7 +42,16 @@
 					</div>
 					<div class="panel-body">
 						<div class="row rowDeps">
-							{{PRE_GOVERNOR}}
+							<div class="col-xs-6 .col-sm-3" ng-repeat="x in POST_GOVERNED">
+								<table class="table table-bordered">
+									<tr class="active">
+  										<td >{{}}</td>
+									</tr>	
+									<tr class="warning" ng-repeat="y in x">
+    									<td>{{y.word}}</td>
+									</tr>
+								</table>	
+							</div>
 						</div>
 					</div>
 				</div>
@@ -56,7 +74,16 @@
 					</div>
 					<div class="panel-body">
 						<div class="row rowDeps">	
-							{{POST_GOVERNED}}
+							<div class="col-xs-6 .col-sm-3" ng-repeat="x in PRE_GOVERNOR">
+								<table class="table table-bordered">
+									<tr class="active">
+  										<td >{{}}</td>
+									</tr>	
+									<tr class="warning" ng-repeat="y in x">
+    									<td>{{y.word}}</td>
+									</tr>
+								</table>	
+							</div>
 						</div>
 					</div>
 				</div>
@@ -68,7 +95,16 @@
 					</div>
 					<div class="panel-body">
 						<div class="row rowDeps">
-							{{POST_GOVERNOR}}
+							<div class="col-xs-6 .col-sm-3" ng-repeat="x in POST_GOVERNOR">
+								<table class="table table-bordered">
+									<tr class="active">
+  										<td >{{}}</td>
+									</tr>	
+									<tr class="warning" ng-repeat="y in x">
+    									<td>{{y.word}}</td>
+									</tr>
+								</table>	
+							</div>
 						</div>
 					</div>
 				</div>
