--- a/Web/css/deepexplore.css
+++ b/Web/css/deepexplore.css
@@ -61,8 +61,11 @@ font-size: 16px;
 
 .wordTitle{
   display: table;
-  margin:auto;
-  padding-bottom: 5%;
+  margin-right:auto;
+  margin-left:auto;
+  margin-top: -3%;
+  padding-bottom: 3%;
+
 }
 .panel-rightDepsGovernor{
   border-color:  darkseagreen;
