--- a/Web/partials/deep.html
+++ b/Web/partials/deep.html
@@ -1,43 +1,37 @@
 <div class="jumbotron">
 	<div class="container">
 		<div class="wordTitle">
-					<h2>
-						<span class="label label-warning">
-							{{word}} , {{pos}}
-						</span>
-					</h3>
+			<h3>
+				<span class="label label-warning">
+					{{word}} , {{pos}} 
+				</span>
+			</h3>
 		</div>
-		<div class="row rowDeps">
-			<div class="col-xs-6">
-				<div class="depTitle">
-					<h3 class="title">Dependências à Esquerda</h3>
-				</div>
-			</div>
-			<div class="col-xs-6">
-				<div class="depTitle">
-					<h3 class="title">Dependências à Direita</h3>
-				</div>
-			</div>
+		<div class="measureTitle">
+			<h4>
+				<span class="label label-default">
+					Medida: {{measure}}	
+				</span>
+			</h4>
 		</div>
-
-		<div class="row">
+	<div class="row">
 			<div class="col-xs-6">
 				<div class="panel panel-info">
 					<div class="panel-heading">
-						<h3 class="panel-title"> Alvo é Modificado</h3>
+						<h3 class="panel-title"> Alvo é Modificado à Esquerda</h3>
 					</div>
 					<div class="panel-body">
-						<div class="row rowDeps">
-							<div class="col-xs-6 .col-sm-3" ng-repeat="x in PRE_GOVERNED">
+						<div class="row rowDeps" ng-repeat="x in PRE_GOVERNED">
 								<table class="table table-bordered">
 									<tr class="active">
   										<td >{{x.name}}</td>
 									</tr>	
-									<tr class="warning" ng-repeat="y in x.data">
-    									<td>{{y.word}}</td>
+									<tr class="warning" >
+    									<td >
+    										<span ng-repeat="y in x.data"> {{y.word}} </span>
+    									</td>
 									</tr>
 								</table>	
-							</div>
 						</div>
 					</div>
 				</div>
@@ -45,20 +39,20 @@
 			<div class="col-xs-6">
 				<div class="panel panel-success">
 					<div class="panel-heading">
-						<h3 class="panel-title">Alvo é Modificado</h3>
+						<h3 class="panel-title">Alvo é Modificado à Esquerda</h3>
 					</div>
 					<div class="panel-body">
-						<div class="row rowDeps">
-							<div class="col-xs-6 .col-sm-3" ng-repeat="x in POST_GOVERNED">
+						<div class="row rowDeps" ng-repeat="x in POST_GOVERNED">
 								<table class="table table-bordered">
 									<tr class="active">
   										<td >{{x.name}}</td>
 									</tr>	
-									<tr class="warning" ng-repeat="y in x.data">
-    									<td>{{y.word}}</td>
+									<tr class="warning" >
+    									<td >
+    										<span ng-repeat="y in x.data"> {{y.word}} </span>
+    									</td>
 									</tr>
 								</table>	
-							</div>
 						</div>
 					</div>
 				</div>
@@ -68,20 +62,20 @@
 			<div class="col-xs-6">
 				<div class="panel panel-leftDepsGovernor">
 					<div class="panel-heading">
-						<h3 class="panel-title">Alvo é Modificador</h3>
+						<h3 class="panel-title">Alvo é Modificador à Direita</h3>
 					</div>
 					<div class="panel-body">
-						<div class="row rowDeps">	
-							<div class="col-xs-6 .col-sm-3" ng-repeat="x in PRE_GOVERNOR">
+						<div class="row rowDeps" ng-repeat="x in PRE_GOVERNOR">
 								<table class="table table-bordered">
 									<tr class="active">
   										<td >{{x.name}}</td>
 									</tr>	
-									<tr class="warning" ng-repeat="y in x.data">
-    									<td>{{y.word}}</td>
+									<tr class="warning" >
+    									<td >
+    										<span ng-repeat="y in x.data"> {{y.word}} </span>
+    									</td>
 									</tr>
 								</table>	
-							</div>
 						</div>
 					</div>
 				</div>
@@ -89,17 +83,18 @@
 			<div class="col-xs-6">
 				<div class="panel panel-rightDepsGovernor">
 					<div class="panel-heading">
-						<h3 class="panel-title">Alvo é Modificador</h3>
+						<h3 class="panel-title">Alvo é Modificador à Direita</h3>
 					</div>
 					<div class="panel-body">
-						<div class="row rowDeps">
-							<div class="col-xs-6 .col-sm-3" ng-repeat="x in POST_GOVERNOR">
+						<div class="row rowDeps" ng-repeat="x in POST_GOVERNOR">
 								<table class="table table-bordered">
 									<tr class="active">
   										<td >{{x.name}}</td>
 									</tr>	
-									<tr class="warning" ng-repeat="y in x.data">
-    									<td>{{y.word}}</td>
+									<tr class="warning" >
+    									<td >
+    										<span ng-repeat="y in x.data"> {{y.word}} </span>
+    									</td>
 									</tr>
 								</table>	
 							</div>
