--- a/Web/partials/deep.html
+++ b/Web/partials/deep.html
@@ -28,7 +28,7 @@
 									</tr>	
 									<tr class="warning" >
     									<td >
-    										<span ng-repeat="y in x.data"> {{y.word}} </span>
+    										<span ng-repeat="y in x.data"> {{y.word}}  () -- </span>
     									</td>
 									</tr>
 								</table>	
@@ -49,7 +49,7 @@
 									</tr>	
 									<tr class="warning" >
     									<td >
-    										<span ng-repeat="y in x.data"> {{y.word}} </span>
+    										<span ng-repeat="y in x.data"> {{y.word}}   () -- </span>
     									</td>
 									</tr>
 								</table>	
@@ -72,7 +72,7 @@
 									</tr>	
 									<tr class="warning" >
     									<td >
-    										<span ng-repeat="y in x.data"> {{y.word}} </span>
+    										<span ng-repeat="y in x.data"> {{y.word}}   () -- </span>
     									</td>
 									</tr>
 								</table>	
@@ -93,7 +93,7 @@
 									</tr>	
 									<tr class="warning" >
     									<td >
-    										<span ng-repeat="y in x.data"> {{y.word}} </span>
+    										<span ng-repeat="y in x.data"> {{y.word}}   () -- </span>
     									</td>
 									</tr>
 								</table>	
