--- a/Web/css/deepexplore.css
+++ b/Web/css/deepexplore.css
@@ -89,3 +89,23 @@ font-size: 16px;
     background-color: orchid;
     color:white;
 }
+
+.waitfForWord{
+  display: none;
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  z-index: 1001;
+  width: 100%;
+  height:100%;
+  background-color: black;
+  opacity: 0.5;
+    filter: alpha(opacity=50); /* For IE8 and earlier */
+}
+
+.waitfForWord > .content{
+  width: 95%;
+  position: relative;
+  top:50%;
+  margin:0px auto;
+}
