--- a/Web/partials/home.html
+++ b/Web/partials/home.html
@@ -32,5 +32,14 @@
         <button class="btn btn-default" type="submit" value="Mostrar" ng-click="searchWord()">Mostrar</button>
     </div>
     </div>
+  <div class = "waitfForWord">
+     <div class ="content">  
+      <div class="progress">
+        <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
+        <!--<span class="sr-only">100% Complete</span>-->
+      </div>
+      </div>
+      </div>
   </div>
+
 </div>
