queries sql alterdo

--- a/Web/partials/deep.html
+++ b/Web/partials/deep.html
@@ -39,7 +39,7 @@
 			<div class="col-xs-6">
 				<div class="panel panel-success">
 					<div class="panel-heading">
-						<h3 class="panel-title">Alvo é Modificado à Esquerda</h3>
+						<h3 class="panel-title">Alvo é Modificado à Direita</h3>
 					</div>
 					<div class="panel-body">
 						<div class="row rowDeps" ng-repeat="x in POST_GOVERNED">
@@ -83,7 +83,7 @@
 			<div class="col-xs-6">
 				<div class="panel panel-rightDepsGovernor">
 					<div class="panel-heading">
-						<h3 class="panel-title">Alvo é Modificador à Direita</h3>
+						<h3 class="panel-title">Alvo é Modificador à Esquerda</h3>
 					</div>
 					<div class="panel-body">
 						<div class="row rowDeps" ng-repeat="x in POST_GOVERNOR">
