--- a/Web/partials/home.html
+++ b/Web/partials/home.html
@@ -78,11 +78,28 @@
   </div>
   <div class = "waitfForWord">
      <div class ="content">  
-      <div class="progress">
-        <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
-        <!--<span class="sr-only">100% Complete</span>-->
-      </div>
-      </div>
+        <div class = "waitText">
+          A processar ...
+        </div>
+        <div class="sk-circle">
+          <div class="sk-circle1 sk-child"></div>
+          <div class="sk-circle2 sk-child"></div>
+          <div class="sk-circle3 sk-child"></div>
+          <div class="sk-circle4 sk-child"></div>
+          <div class="sk-circle5 sk-child"></div>
+          <div class="sk-circle6 sk-child"></div>
+          <div class="sk-circle7 sk-child"></div>
+          <div class="sk-circle8 sk-child"></div>
+          <div class="sk-circle9 sk-child"></div>
+          <div class="sk-circle10 sk-child"></div>
+          <div class="sk-circle11 sk-child"></div>
+          <div class="sk-circle12 sk-child"></div>
+        </div>
+        <div class = "waitText">
+          <button type="button" class="btn btn-link" ng-click="reloadHomePage()">
+              Voltar ao início
+          </button>
+        </div>
       </div>
   </div>
 </div>
