--- a/Web/css/deepexplore.css
+++ b/Web/css/deepexplore.css
@@ -1,3 +1,9 @@
+/*redefenition*/
+ @media screen and (min-width:768px){ 
+  .container .jumbotron,.container-fluid .jumbotron
+  {padding-right:30px;padding-left:30px}
+}
+
 .deepword{
 padding-top: 2%;
 position: relative;
@@ -49,10 +55,11 @@ text-align:center
   width: 60%;
 }
 
+
 .rowDeps{
-  padding-top: 2%;
   padding-right: 2%;
   padding-left: 2%;
+      font-size: 13px;
 }
 
 .depTitle{
@@ -84,6 +91,22 @@ font-size: 16px;
   margin-top: -1%;
   padding-bottom: 2%;
 }
+
+.measureTitle h4 {
+    display: inline-block;
+    vertical-align: middle;    
+}
+
+.measureTitle > .dropdown {
+    display: inline-block;
+    vertical-align: middle;
+}
+.measureTitle > .dropdown button {
+    width: 105px;
+    padding-bottom: 2px;
+    margin-top: 4px;
+}
+
 
 /*nao estava defenido no bootstrap*/
 .panel-rightDepsGovernor{
