--- a/Web/partials/deep.html
+++ b/Web/partials/deep.html
@@ -1,4 +1,4 @@
-<div class="jumbotron">
+<div class="jumbotron jumbotron_deep">
 	<div class="container">
 		<div class="wordTitle">
 			<h3>
@@ -9,10 +9,22 @@
 		</div>
 		<div class="measureTitle">
 			<h4>
-				<span class="label label-default">
-					Medida: {{measure}}	
+				<span class="label label-default label_measures">
+					Medida:  
 				</span>
 			</h4>
+			<div class="dropdown">
+        		<button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
+            			{{measure}}
+           			<span class="caret"></span>
+            		<!--<span class="sr-only">Toggle Dropdown</span>-->
+          		</button>
+          		<ul class="dropdown-menu" role="menu">
+           		 	<li ng-repeat="x in measures" ng-click="changeMeasureDeps(x)">
+             		  	<a  href=""> {{ x }} </a>
+            		 </li>
+          		</ul>
+        	</div>
 		</div>
 	<div class="row">
 			<div class="col-xs-6">
@@ -27,7 +39,10 @@
 									<label>{{x.name}}</label>
 									<tr class="warning" >
     									<td>
-    										<span ng-repeat="y in x.data">{{y.duallog}}: {{y.word}} -- </span>
+    										<span ng-repeat="y in x.data">
+    											{{y.duallog}}: {{y.word}} 
+    											<span class="glyphicon glyphicon-option-vertical" aria-hidden="true"></span>
+    										</span>
     									</td>
 									</tr>
 								</table>
@@ -42,18 +57,21 @@
 						<h3 class="panel-title">Alvo é Modificado à Direita</h3>
 					</div>
 					<div class="panel-body">
-						<div class="row rowDeps" ng-repeat="x in POST_GOVERNED">
+						<div class="row">
+							<div class = "rowDeps" ng-repeat="x in POST_GOVERNED">
 								<table class="table table-bordered">
-									<tr class="active">
-  										<td >{{x.name}}</td>
-									</tr>	
+									<label>{{x.name}}</label>
 									<tr class="warning" >
-    									<td >
-    										<span ng-repeat="y in x.data">{{y.duallog}}: {{y.word}} -- </span>
+    									<td>
+    										<span ng-repeat="y in x.data">
+    											{{y.duallog}} ({{y.measure}}): {{y.word}} 
+    											<span class="glyphicon glyphicon-option-vertical" aria-hidden="true"></span>
+    										</span>
     									</td>
 									</tr>
-								</table>	
-						</div>
+								</table>
+							</div>
+						</div>	
 					</div>
 				</div>
 			</div>
@@ -65,18 +83,21 @@
 						<h3 class="panel-title">Alvo é Modificador à Esquerda</h3>
 					</div>
 					<div class="panel-body">
-						<div class="row rowDeps" ng-repeat="x in PRE_GOVERNOR">
+						<div class="row">
+							<div class = "rowDeps" ng-repeat="x in PRE_GOVERNOR">
 								<table class="table table-bordered">
-									<tr class="active">
-  										<td >{{x.name}}</td>
-									</tr>	
+									<label>{{x.name}}</label>
 									<tr class="warning" >
-    									<td >
-    										<span ng-repeat="y in x.data">{{y.duallog}}: {{y.word}} -- </span>
+    									<td>
+    										<span ng-repeat="y in x.data">
+    											{{y.duallog}}: {{y.word}} 
+    											<span class="glyphicon glyphicon-option-vertical" aria-hidden="true"></span>
+    										</span>
     									</td>
 									</tr>
-								</table>	
-						</div>
+								</table>
+							</div>
+						</div>	
 					</div>
 				</div>
 			</div>
@@ -86,22 +107,50 @@
 						<h3 class="panel-title">Alvo é Modificador à Direita</h3>
 					</div>
 					<div class="panel-body">
-						<div class="row rowDeps" ng-repeat="x in POST_GOVERNOR">
+						<div class="row">
+							<div class = "rowDeps" ng-repeat="x in POST_GOVERNOR">
 								<table class="table table-bordered">
-									<tr class="active">
-  										<td >{{x.name}}</td>
-									</tr>	
+									<label>{{x.name}}</label>
 									<tr class="warning" >
-    									<td >
-    										<span ng-repeat="y in x.data">{{y.duallog}}: {{y.word}} -- </span>
+    									<td>
+    										<span ng-repeat="y in x.data">
+    											{{y.duallog}}: {{y.word}} 
+    											<span class="glyphicon glyphicon-option-vertical" aria-hidden="true"></span>
+    										</span>
     									</td>
 									</tr>
-								</table>	
+								</table>
 							</div>
-						</div>
+						</div>	
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
+</div>
+ <div class = "waitfForWord">
+     <div class ="content">  
+        <div class = "waitText">
+          A processar ...
+        </div>
+        <div class="sk-circle">
+          <div class="sk-circle1 sk-child"></div>
+          <div class="sk-circle2 sk-child"></div>
+          <div class="sk-circle3 sk-child"></div>
+          <div class="sk-circle4 sk-child"></div>
+          <div class="sk-circle5 sk-child"></div>
+          <div class="sk-circle6 sk-child"></div>
+          <div class="sk-circle7 sk-child"></div>
+          <div class="sk-circle8 sk-child"></div>
+          <div class="sk-circle9 sk-child"></div>
+          <div class="sk-circle10 sk-child"></div>
+          <div class="sk-circle11 sk-child"></div>
+          <div class="sk-circle12 sk-child"></div>
+        </div>
+        <div class = "waitText">
+          <button type="button" class="btn btn-link" ng-click="reloadHomePage()">
+              Voltar ao início
+          </button>
+        </div>
+      </div>
 </div>
