--- a/Web/partials/deep.html
+++ b/Web/partials/deep.html
@@ -40,7 +40,7 @@
 									<tr class="warning" >
     									<td>
     										<span ng-repeat="y in x.data">
-    											{{y.duallog}}: {{y.word}} 
+    											<b>{{y.word}}</b> ({{y.duallog}}:{{y.measure}})
     											<span class="glyphicon glyphicon-option-vertical" aria-hidden="true"></span>
     										</span>
     									</td>
@@ -64,7 +64,7 @@
 									<tr class="warning" >
     									<td>
     										<span ng-repeat="y in x.data">
-    											{{y.duallog}} ({{y.measure}}): {{y.word}} 
+    											 <b>{{y.word}}</b> ({{y.duallog}}:{{y.measure}})
     											<span class="glyphicon glyphicon-option-vertical" aria-hidden="true"></span>
     										</span>
     									</td>
@@ -90,7 +90,7 @@
 									<tr class="warning" >
     									<td>
     										<span ng-repeat="y in x.data">
-    											{{y.duallog}}: {{y.word}} 
+    											{{y.word}} ({{y.duallog}}:{{y.measure}})
     											<span class="glyphicon glyphicon-option-vertical" aria-hidden="true"></span>
     										</span>
     									</td>
@@ -114,7 +114,7 @@
 									<tr class="warning" >
     									<td>
     										<span ng-repeat="y in x.data">
-    											{{y.duallog}}: {{y.word}} 
+    											<b>{{y.word}}</b> ({{y.duallog}}:{{y.measure}})
     											<span class="glyphicon glyphicon-option-vertical" aria-hidden="true"></span>
     										</span>
     									</td>
@@ -148,7 +148,7 @@
           <div class="sk-circle12 sk-child"></div>
         </div>
         <div class = "waitText">
-          <button type="button" class="btn btn-link" ng-click="reloadHomePage()">
+          <button type="button" class="btn btn-link" ng-click="reloadPage()">
               Voltar ao início
           </button>
         </div>
