alterações nas medidas no php

--- a/Web/css/deepexplore.css
+++ b/Web/css/deepexplore.css
@@ -59,9 +59,11 @@ text-align:center
 .rowDeps{
   padding-right: 2%;
   padding-left: 2%;
-      font-size: 13px;
+      /*font-size: 13px;*/
 }
-
+.rowDeps > .table{
+  font-size: 13px;
+}
 .depTitle{
   background-color: dimgrey;
   padding: 10px 15px;
