--- a/Web/partials/deep.html
+++ b/Web/partials/deep.html
@@ -27,7 +27,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-xs-6">
+			<div class="col-xs-6" id="PRE_GOVERNED">
 				<div class="panel panel-info">
 					<div class="panel-heading">
 						<h3 class="panel-title"> Alvo é Modificado à Esquerda</h3>
@@ -46,10 +46,13 @@
 								</tr>
 							</table>
 						</div>
+						<div class = "notApplicable">
+								<h4>{{msg_1}}</h4>
+						</div>
 					</div>
 				</div>
 			</div>
-			<div class="col-xs-6">
+			<div class="col-xs-6" id="POST_GOVERNED">
 				<div class="panel panel-success">
 					<div class="panel-heading">
 						<h3 class="panel-title">Alvo é Modificado à Direita</h3>
@@ -68,12 +71,15 @@
 								</tr>
 							</table>
 						</div>
+						<div class = "notApplicable">
+								<h4>{{msg_2}}</h4>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-xs-6">
+			<div class="col-xs-6" id="PRE_GOVERNOR">
 				<div class="panel panel-primary">
 					<div class="panel-heading">
 						<h3 class="panel-title">Alvo é Modificador à Esquerda</h3>
@@ -92,10 +98,13 @@
 								</tr>
 							</table>
 						</div>
+						<div class = "notApplicable">
+								<h4>{{msg_3}}</h4>
+						</div>
 					</div>
 				</div>
 			</div>
-			<div class="col-xs-6">
+			<div class="col-xs-6" id="POST_GOVERNOR">
 				<div class="panel panel-rightDepsGovernor">
 					<div class="panel-heading">
 						<h3 class="panel-title">Alvo é Modificador à Direita</h3>
@@ -113,6 +122,9 @@
 									</td>
 								</tr>
 							</table>
+						</div>
+						<div class = "notApplicable">
+								<h4>{{msg_4}}</h4>
 						</div>
 					</div>	
 				</div>
