melhorias nas queries e correção de pequenos erros

--- a/Web/partials/home.html
+++ b/Web/partials/home.html
@@ -73,7 +73,7 @@
     </div>
   </div>
 </div>
-<div class = "waitfForWord">
+<div class = "waitFor" id ="waitForWord">
  <div class ="content">  
   <div class = "waitText">
     A processar ...
