--- a/Web/css/deepexplore.css
+++ b/Web/css/deepexplore.css
@@ -124,7 +124,7 @@ font-size: 16px;
 }
 
 
-.waitfForWord{
+.waitFor{
   display: none;
   position: absolute;
   left: 0px;
@@ -137,14 +137,14 @@ font-size: 16px;
     filter: alpha(opacity=60); /* For IE8 and earlier */
 }
 
-.waitfForWord > .content{
+.waitFor > .content{
   width: 70%;
   position: relative;
   top:45%;
   margin:0px auto;
 }
 
-.waitfForWord > .content > .waitText{
+.waitFor > .content > .waitText{
   text-align: center;
   color: white;
   font-size: 18px;
