--- a/Web/partials/deep.html
+++ b/Web/partials/deep.html
@@ -154,58 +154,79 @@
 				<h4 class="modal-title" id="myModalLabel">{{exampleTitle}}</h4>
 			</div>
 			<div class="modal-body">
-					<div class = "row">
-						<div class = "col-md-4">
-							<label>Relação:</label>
-						</div>
-						<div class = "col-md-7">
-							{{depTitle}}
-						</div>
+				<div class = "row">
+					<div class = "col-md-4">
+						<label>Relação:</label>
 					</div>
-					<div class = "row">
-						<div class = "col-md-4">
-							<label>Palavra Alvo:</label>
-						</div>
-						<div class = "col-md-6">
-							<p>{{word}} ({{pos}})</p>
-						</div>
+					<div class = "col-md-7">
+						{{depTitle}}
 					</div>
-					<div class = "row">
-						<div class = "col-md-4">
-							<label>Palavra Co-ocorrente:</label>
-						</div>
-						<div class = "col-md-6">
-							<p>{{otherWord}} ({{pos_otherWord}})</p>
-						</div>
+				</div>
+				<div class = "row">
+					<div class = "col-md-4">
+						<label>Palavra Alvo:</label>
 					</div>
-					<div class = "row">
-						<div class = "col-md-4">
-							<label>{{measure}}:</label>
-						</div>
-						<div class = "col-md-6">
-							<p>{{m_value}}</p>
-						</div>
+					<div class = "col-md-6">
+						<p>{{word}} ({{pos}})</p>
 					</div>
-					<div class = "row">
-						<div class = "col-md-4">
-							<label>Frequência:</label>
-						</div>
-						<div class = "col-md-6">
-							<p>{{frequency}} ({{logfrequency}})</p>
-						</div>
+				</div>
+				<div class = "row">
+					<div class = "col-md-4">
+						<label>Palavra Co-ocorrente:</label>
 					</div>
+					<div class = "col-md-6">
+						<p>{{otherWord}} ({{pos_otherWord}})</p>
+					</div>
+				</div>
+				<div class = "row">
+					<div class = "col-md-4">
+						<label>{{measure}}:</label>
+					</div>
+					<div class = "col-md-6">
+						<p>{{m_value}}</p>
+					</div>
+				</div>
+				<div class = "row">
+					<div class = "col-md-4">
+						<label>Frequência:</label>
+					</div>
+					<div class = "col-md-6">
+						<p>{{frequency}} ({{logfrequency}})</p>
+					</div>
+				</div>
 				<div class = "concordance">
-					<label> Frases de exemplo </lable>
+					<label> Frases de exemplo: </label>
 					<table class="table table-striped">
-					  <tr ng-repeat="x in sentences">
-					  	<td>
-					  		{{x.number}},{{x.file}}
-					  	</td>
-					  	<td>
-					  		{{x.sentence}}
-					  	</td>
-					  </tr>
+						<tr ng-repeat="x in sentences">
+							<td>
+								{{x.number}},{{x.file}}
+							</td>
+							<td>
+								{{x.sentence}}
+							</td>
+						</tr>
 					</table>
+				</div>
+			</div>
+		</div>
+		<div id="waitForConcordance"class = "waitFor">
+			<div class ="content">  
+				<div class = "waitText">
+				A processar ...
+				</div>
+				<div class="sk-circle">
+					<div class="sk-circle1 sk-child"></div>
+					<div class="sk-circle2 sk-child"></div>
+					<div class="sk-circle3 sk-child"></div>
+					<div class="sk-circle4 sk-child"></div>
+					<div class="sk-circle5 sk-child"></div>
+					<div class="sk-circle6 sk-child"></div>
+					<div class="sk-circle7 sk-child"></div>
+					<div class="sk-circle8 sk-child"></div>
+					<div class="sk-circle9 sk-child"></div>
+					<div class="sk-circle10 sk-child"></div>
+					<div class="sk-circle11 sk-child"></div>
+					<div class="sk-circle12 sk-child"></div>
 				</div>
 			</div>
 		</div>
@@ -288,7 +309,7 @@
     </div>
   </div>
 </div>
-<div class = "waitfForWord">
+<div class = "waitFor" id ="waitForWord">
 	<div class ="content">  
 		<div class = "waitText">
 			A processar ...
